// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Multichannel text just text 1`] = `
<message
  type="text"
>
  Some text
</message>
`;

exports[`Multichannel text with buttons as array 1`] = `
<message
  type="text"
>
  The verbose text
  
 1. button text1
  
 2. button text3
  
 - button text2: http://adrss
</message>
`;

exports[`Multichannel text with buttons plain 1`] = `
<message
  type="text"
>
  The verbose text
  
 1. button text1
  
 2. button text3
  
 - button text2: http://adrss
</message>
`;

exports[`Multichannel text with replies as array 1`] = `
<message
  type="text"
>
  The verbose text
  
 1. reply text1
  
 2. reply text2
</message>
`;

exports[`Multichannel text with replies plain 1`] = `
<message
  type="text"
>
  Quick replies
  
 1. reply text1
  
 2. reply text2
</message>
`;
